Colaboratory를 통해 생성됨

--- a/Goyang_Public_bicycles_EDA_1.ipynb
+++ b/Goyang_Public_bicycles_EDA_1.ipynb
@@ -53,7 +53,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         },
         "outputId": "1800c22b-1d02-4a4d-d033-f983e074bee8"
       },
@@ -61,7 +61,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "MY_GOOGLE_DRIVE_PATH = '/content/gdrive/My Drive/Colab Notebooks/고양시/data'\n",
         "PROJECT_PATH = join('/content/gdrive', MY_GOOGLE_DRIVE_PATH)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "%cd \"{PROJECT_PATH}\"\n",
         "!ls"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
         "# 해당 셀 실행 후 런타임 다시시작\n",
         "# 본 셀은 다시 시작할 필요 없음 순서대로 셀 찍기"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629
+          "height": 649
         },
         "outputId": "e1944432-a40b-4973-d0d5-0d016d2c9759"
       },
@@ -222,7 +222,7 @@
         "!pip install haversine     # 좌표간 거리 구하기\n",
         "!pip install tqdm"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 73
         },
         "outputId": "4bd4b214-8680-4479-f93f-2ef209d2ac7c"
       },
@@ -294,7 +294,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,33 +303,6 @@
             "  import pandas.util.testing as tm\n"
           ],
           "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m6AExfpVuJiO",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "a5b95e09-ca5a-4d08-aaea-c0788d29eca6"
-      },
-      "source": [
-        "print(plt.rcParams['font.family'])\n",
-        "\n",
-        "%matplotlib inline"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['NanumGothic']\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -346,7 +319,7 @@
         "\n",
         "plt.rc('font', family='NanumBarunGothic') "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +329,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 데이터 전처리 EDA 및 시각화"
+        "# 데이터 전처리 EDA 및 시각화_1"
       ]
     },
     {
@@ -386,7 +359,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 453
         },
         "outputId": "c8e4ded6-a212-4e19-a523-28bf01c88fc4"
       },
@@ -394,7 +367,7 @@
         "df_2=pd.read_csv('02.자전거스테이션.csv')\n",
         "df_2"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +535,7 @@
         "df_7=df_7[df_7['총인구수']<=250000]          # 필요없는 데이터 제거\n",
         "df_7.head()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +663,7 @@
         "geo_str_34=geojson.load(open(geo_path_34,encoding='utf-8'))\n",
         "geo_str_34"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +709,7 @@
         "st_d=st_d[['Station_ID','dong']]\n",
         "st_d"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +847,7 @@
         "df_8=gpd.read_file('08.행정경계(시군구).geojson')\n",
         "df_8"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +929,7 @@
         "geo_str_8= geojson.load(open(geo_path_8,encoding='utf-8'))\n",
         "geo_str_8"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +981,7 @@
         "st_g\n",
         "\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1121,7 @@
         "station=station[['gu','dong','Station_ID','STATION_NAME','거치대 수량','경도','위도']]\n",
         "station"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1365,7 +1338,7 @@
         "    ).add_to(map_station)\n",
         "map_station"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1413,7 +1386,7 @@
         "plugins.Fullscreen(position='topright').add_to(map_station_heat)\n",
         "map_station_heat"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1457,7 @@
         "                  fill_color='Blues').add_to(map_dong_count)\n",
         "map_dong_count"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1539,7 +1512,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1602,7 +1575,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1648,7 +1621,7 @@
         "                  fill_color='Blues').add_to(gu_map_count)\n",
         "gu_map_count"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1696,7 +1669,7 @@
         "plt.box(False)\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1758,7 +1731,7 @@
         "plt.xlabel(\"\")\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1814,7 +1787,7 @@
         "                  fill_color='Blues').add_to(bike_map)\n",
         "bike_map"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1878,7 +1851,7 @@
         "    m = 1000 * km\n",
         "    return m"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1906,7 +1879,7 @@
         "    dict_dists[name] = dists\n",
         "#dict_dists"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1939,7 +1912,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2007,7 +1980,7 @@
         "    dict_dists[name] = dists\n",
         "#dict_dists"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2013,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2085,7 +2058,7 @@
         "#     # axes[j][i].axvline(np.array(dists).mean(), color='green')\n",
         "#     print(np.array(dists).mean())"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2112,7 +2085,7 @@
         "plt.box(False)\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2161,7 +2134,7 @@
         "                  fill_color='Blues').add_to(bike_map)\n",
         "bike_map"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
