--- a/Analyze_Stock_as_NaverDataLab/Analyze_Stock_as_NaverDataLab.ipynb
+++ b/Analyze_Stock_as_NaverDataLab/Analyze_Stock_as_NaverDataLab.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "데이터랩과_주가의_상관도분석.ipynb",
+      "name": "Analyze_Stock_as_NaverDataLab.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "Q5DoZDkINbrD",
+        "XhA19zn6WLh5",
         "9uaPkId6QOtL",
         "_gfOLVvPQUt7",
         "nbEdDvoDUWsl",
@@ -15,7 +15,7 @@
         "UahXGKK4Vx9a",
         "VuOdqiWsW70J"
       ],
-      "authorship_tag": "ABX9TyOBIFpdA2MNtWZa+Sn8KGU/",
+      "authorship_tag": "ABX9TyOlkIyJcUu7VBzU+o0xltpl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,38 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OH1107/Project/blob/master/Analyze_Stock_as_NaverDataLab/Analyze_Stock_as_NaverDataLab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w0JyCWk4Va6R",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 네이버 데이터랩의 검색어 트렌드의 주가 영향력 분석\n",
+        "- 조사 기업 대상 : CJ ENM\n",
+        "- 데이터랩 키워드 : 2019년 ENM이 배급사로 개봉한 영화 5개 선정"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XhA19zn6WLh5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 라이브러리 호출"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rofs_dkBWNLW",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 한글 깨짐 현상 방지"
       ]
     },
     {
@@ -68,6 +100,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "61x39QJSWQmj",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 필요 라이브러리 호출"
       ]
     },
     {
@@ -123,6 +165,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jhgZMFG9WYRZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 네이버 금융 일별시세(https://finance.naver.com/sise/)로부터 CJ_ENM의 일별시세를 크롤링\n",
+        "- 네이버 데이터랩을 호출해 `Colab`상에서 데이터를 확인할 수 있도록 함"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "65TCIhVPIV0g",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 네이버 금융, CJ ENM의 일별시세 크롤링 함수 정의"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hsJ204S88se9",
@@ -141,6 +204,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7q5pXUBEIcRT",
+        "colab_type": "text"
+      },
+      "source": [
+        "- CJ ENM의 일별시세 1페이지, 지정페이지까지 크롤링 함수 정의"
+      ]
     },
     {
       "cell_type": "code",
@@ -162,6 +235,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SEDg4TFBIjKy",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 크롤링한 DataFrame을 BigQuery에 적재하는 함수 정의"
+      ]
     },
     {
       "cell_type": "code",
@@ -253,6 +336,16 @@
           ],
           "name": "stderr"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0zijR8leIqI6",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 사용자 정의함수로 진행한 과정(크롤링, BigQuery적재)가 정상적으로 작동하였는지 확인"
       ]
     },
     {
