--- a/Analyze_Stock_as_NaverDataLab/Analyze_Stock_as_NaverDataLab.ipynb
+++ b/Analyze_Stock_as_NaverDataLab/Analyze_Stock_as_NaverDataLab.ipynb
@@ -15,7 +15,7 @@
         "UahXGKK4Vx9a",
         "VuOdqiWsW70J"
       ],
-      "authorship_tag": "ABX9TyOlkIyJcUu7VBzU+o0xltpl",
+      "authorship_tag": "ABX9TyOhwQvqQVjrw5Hu2bJlBGU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,11 +471,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "4ELr9XoI9NsR",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 현재 `BigQuery` `Stock_data.cj_enm_stock` 위치에 511페이지의 일별시세 데이터를 적재하였으며 성공적으로 호출하였다."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "LnW4WU2eNX6F",
         "colab_type": "text"
       },
       "source": [
         "## 네이버 데이터 랩"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xpxgOxwa9jh2",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 필요 라이브러리 호출"
       ]
     },
     {
@@ -512,6 +532,30 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uogh7twG9p2G",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 네이버 데이터랩을 `python`소스코드로 구현할 수 있다.\n",
+        "  - 아래 사용자 정의 함수들은 다음의 기능을 수행한다.\n",
+        "    - 네이버 데이터 랩에 키워드를 지정하여 검색량 크롤링\n",
+        "    - 크롤링한 키워드 검색량과 같은 기간 동안의 주식데이터 호출 및 병합"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h1AdAItt-mOk",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 아래의 **`makeQry 함수`**는 `키워드`, `시작 날짜`, `마지막 날짜`, `표시 날짜 형태`를 인자로 받는다.\n",
+        "- 인자로 받은 값들을 데이터랩 크롤링에서 필요로 하는 형태인 json 형태로 변환해주는 기능을 한다."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1rl3NraSLKoX",
@@ -534,6 +578,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VbqCXukp_P42",
+        "colab_type": "text"
+      },
+      "source": [
+        "- **`Mynsearch 함수`**는 json 형태로 받은 키워드 등의 값들(`makeQry` 함수 리턴 값)을 데이터 랩에 입력하여 검색량을 크롤링한다."
+      ]
     },
     {
       "cell_type": "code",
@@ -569,6 +623,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oI45Tm1__Udm",
+        "colab_type": "text"
+      },
+      "source": [
+        "- **`MyDataLab` 함수**는 `Mynsearch`를 통해 받은 res(json 형태)값을 추출해내 DataFrame으로 변환한다. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OsNxTLgQNhVg",
@@ -600,6 +664,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SscsRd4TAVS3",
+        "colab_type": "text"
+      },
+      "source": [
+        "- **`MyDBLab 함수`**는 `MyDataLab 함수`를 통해 받은 DataFrame과 `BigQuery`로부터 주식데이터를 호출해 병합한다."
+      ]
     },
     {
       "cell_type": "code",
@@ -637,6 +711,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TgvVMRHNAqSi",
+        "colab_type": "text"
+      },
+      "source": [
+        "- **`pltDBLab 함수`**는 병합되어 나온 `MyDBLab의 함수` 리턴값을 시각화하는 기능을 한다."
+      ]
     },
     {
       "cell_type": "code",
@@ -761,6 +845,25 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q6lwLx7QA7Ni",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 2019년 1월 1일부터 2020년 8월 23일 까지, CJ ENM의 주가변동과 CJ를 배급사로 개봉한 영화 5개에 대한 검색량을 시각화하였다.\n",
+        "  - 기존 키워드에 '기생충'을 포함하였으나, 검색량이 극단적으로 많아 다른 영화들에 대한 검색량 값들이 낮게 나오므로 제외하였다.\n",
+        "- 얼핏 그래프를 보면 다음의 사실들을 알 수 있다.\n",
+        "  - 개봉 후, 해당 영화의 검색량이 급증하며 약 1달 후를 기점으로 검색량이 0에 가까워진다.\n",
+        "  - '백두산'의 경우 개봉 10개월 전에 검색량이 급증한 것을 볼 수 있다.\n",
+        "    - 아마 화산폭발 징후, 정치적인 문제 등으로 검색량이 증가했을 것으로 예상된다.\n",
+        "\n",
+        "\n",
+        "- 그러나 기간을 너무 길게 잡아 호출했으므로 주가와 키워드 검색량의 상관관계는 두드러지게 보이지 않는다.\n",
+        "- 기간을 재설정하여 해당 기간의 검색량, 주가 데이터만을 가지고 비교해보고자 한다. "
       ]
     },
     {
